@@ -20,7 +20,7 @@ my $css = <<END;
 END
 
 #test to ensure that fatal errors are in fact fatal
-my $fatal = CSS::Simple->new({ suppress_errors => 0 });
+my $fatal = CSS::Simple->new({ warns_as_errors => 1 });
 
 eval {
   $fatal->read({css => $css});
@@ -31,20 +31,22 @@ ok($@ =~ /^Invalid or unexpected property/);
 @warnings = (); # clear all preceding warnings and start over
 
 #test to ensure that when fatals are disabled that we only get warnings
-my $supressed = CSS::Simple->new({ suppress_errors => 1 });
+my $suppressed = CSS::Simple->new();
 
 eval {
-  $supressed->read({css => $css});
+  $suppressed->read({css => $css});
 };
+
+@warnings = @{$suppressed->content_warnings()};
 
 ok(scalar @warnings == 1);
 ok($warnings[0] =~ /^Invalid or unexpected property/);
 
-#test to ensure that default errors are in fact fatal
+#test to ensure that errors are not thrown by default
 my $fatal = CSS::Simple->new();
 
 eval {
   $fatal->read({css => $css});
 };
 
-ok($@ =~ /^Invalid or unexpected property/);
+ok($@ eq '');
